# mental_health_Sep25

./: .gitattributes  .gitignore  DATA.md  LICENSE  README.md  environment.yml  pyproject.toml
00_admin/: MH_Sep2025_EDA_Unified_Workflow.md
01_data/processed/: clean.csv  codebook_normalized.csv
02_notebooks/experiments/: Test Notebook.ipynb
02_notebooks/final/: mh_prepost_analysis.ipynb
03_src/mh/: __init__.py  datastructure.py  io.py  paths.py
04_results/tables/: paired_tests_full.csv  paired_tests_pretty.csv
